# app/Models/User.php
@@ -8,6 +8,20 @@ use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     type="object",
+ *     title="User",
+ *     description="User model",
+ *     @OA\Property(property="id", type="integer", description="The ID of the user"),
+ *     @OA\Property(property="name", type="string", description="The name of the user"),
+ *     @OA\Property(property="email", type="string", format="email", description="The email of the user"),
+ *     @OA\Property(property="password", type="string", format="password", description="The password of the user"),
+ *     @OA\Property(property="created_at", type="string", format="date-time", description="The creation date of the user"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time", description="The update date of the user")
+ * )
+ */
 class User extends Authenticatable
 {
     use HasApiTokens, HasFactory, Notifiable;
